--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "jwt-decode": "^4.0.0",
     "mobx": "^6.13.5",
     "mobx-react-lite": "^4.0.7",
+    "numeralize-ru": "^2.0.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.6",
     "react-dom": "^18.3.1",
