now be create devices, types & brands; added error handler; fix DB types

--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -10,16 +10,16 @@
     "prettier"
   ],
   "rules": {
-    "prettier/prettier": [
-      "error",
-      {
-        "singleQuote": true
-      }
-    ],
-    "quotes": [
-      "error",
-      "single"
-    ],
+    "prettier/prettier": //    [
+    "error",
+    //      {
+    //        "singleQuote": true
+    //      }
+    //    ],
+    //    "quotes": [
+    //      "error",
+    //      "single"
+    //    ],
     "padding-line-between-statements": [
       "error",
       {
